# DocImprover

./: .gitignore  README.md  pyproject.toml  test_api.py
src/doc_improver/: __init__.py  app.py  config.py  document_processor.py  logging_config.py
src/doc_improver/config/: __init__.py  config.py  formatting_config.py
src/doc_improver/routes/: __init__.py  documents.py  main.py  media.py
src/doc_improver/static/: styles.css
src/doc_improver/templates/: index.html
src/doc_improver/uploads/99af8a5c-8fb3-462c-b394-de26649298a9/: improved_Board_Agreement_copy.docx
src/doc_improver/utils/: file_helpers.py
tests/: conftest.py  test_app.py  test_blueprints.py  test_document_processor.py  test_image_embedding.py  test_utils.py
uploads/: Board_Agreement_copy.docx  improved_Board_Agreement_copy.docx
uploads/16587b01-e7e7-4e15-9912-ffaa3a5437c5/: improved_Board_Agreement_copy.docx
